[SELC-6087] Updated api updateUserRegistryAndSendNotification to allow updating the phone number in addition to the email.
